--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,12 @@ h1, h2, h3, h4, h5, h6 {
   width: 120px;
   border: 8px solid #2c2f3f;
 }
-
+#hero .hero-container img{
+  margin: 15px auto;
+  display: block;
+  width: 300px;
+  border: 8px solid #2c2f3f;
+}
 #header .profile h1 {
   font-size: 24px;
   margin: 0;
